# hwbench

./: .gitignore  README.md  run.sh
benchmark/: CMakeLists.txt
benchmark/include/: benchmark.h  modules.h  system_info.h
benchmark/src/: compression.c  cpu.c  csv_writer.c  floating_point.c  fs_metadata.c  hashing.c  json_writer.c  main.c  memory.c  python_runner.c  storage.c  system_info.c  thread_bench.c
server/: README_DEPLOY.md  main.py  requirements.txt
